force-app/main/default/objects/Mock_Abha__c/Mock_Abha__c.object-meta.xml
<CustomObject>
    <description>Object to store data for mocking ABha API Calls</description>
    <label>Mock Abha</label>
    <nameField>
        <label>Mock Abha Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mock Abha</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>