force-app/main/default/objects/Mock_Abha__c/fields/AadhaarNumber__c.field-meta.xml
<CustomField>
    <fullName>AadhaarNumber__c</fullName>
    <label>AadhaarNumber</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>