force-app/main/default/objects/Mock_Abha__c/fields/ABHA_Address__c.field-meta.xml
<CustomField>
    <fullName>ABHA_Address__c</fullName>
    <label>ABHA Address</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>