force-app/main/default/objects/Mock_Abha__c/fields/ABHAid__c.field-meta.xml
<CustomField>
    <fullName>ABHAid__c</fullName>
    <externalId>true</externalId>
    <label>ABHAid</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>