force-app/main/default/objects/Mock_Abha__c/fields/abhaType__c.field-meta.xml
<CustomField>
    <fullName>abhaType__c</fullName>
    <label>abhaType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>ARMY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>