force-app/main/default/objects/Mock_Abha__c/fields/dayOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dayOfBirth__c</fullName>
    <label>dayOfBirth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>