force-app/main/default/objects/Mock_Abha__c/fields/districtCode__c.field-meta.xml
<CustomField>
    <fullName>districtCode__c</fullName>
    <label>districtCode</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>