force-app/main/default/objects/Mock_Abha__c/fields/districtName__c.field-meta.xml
<CustomField>
    <fullName>districtName__c</fullName>
    <label>districtName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>