force-app/main/default/objects/Mock_Abha__c/fields/kycVerified__c.field-meta.xml
<CustomField>
    <fullName>kycVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>kycVerified</label>
    <type>Checkbox</type>
</CustomField>