force-app/main/default/objects/Mock_Abha__c/fields/middleName__c.field-meta.xml
<CustomField>
    <fullName>middleName__c</fullName>
    <label>middleName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>