force-app/main/default/objects/Mock_Abha__c/fields/monthOfBirth__c.field-meta.xml
<CustomField>
    <fullName>monthOfBirth__c</fullName>
    <label>monthOfBirth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>