force-app/main/default/objects/Mock_Abha__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>TRIM(
  IF(NOT(ISBLANK( firstName__c )), firstName__c, &quot;&quot;) &amp; 
  IF(NOT(ISBLANK(middleName__c)), &quot; &quot; &amp; middleName__c, &quot;&quot;) &amp; 
  IF(NOT(ISBLANK(lastName__c)), &quot; &quot; &amp; lastName__c, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>