force-app/main/default/objects/Mock_Abha__c/fields/Patient_History__c.field-meta.xml
<CustomField>
    <fullName>Patient_History__c</fullName>
    <label>Patient History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>