force-app/main/default/objects/Mock_Abha__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <label>pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>