force-app/main/default/objects/Mock_Abha__c/fields/SimplifiedAbhaID__c.field-meta.xml
<CustomField>
    <fullName>SimplifiedAbhaID__c</fullName>
    <formula>SUBSTITUTE( ABHAid__c , &apos;-&apos;, &apos;&apos;)</formula>
    <label>SimplifiedAbhaID</label>
    <type>Text</type>
</CustomField>