force-app/main/default/objects/Mock_Abha__c/fields/stateCode__c.field-meta.xml
<CustomField>
    <fullName>stateCode__c</fullName>
    <label>stateCode</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>