force-app/main/default/objects/Mock_Abha__c/fields/stateName__c.field-meta.xml
<CustomField>
    <fullName>stateName__c</fullName>
    <label>stateName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>