force-app/main/default/objects/Mock_Abha__c/fields/subdistrictName__c.field-meta.xml
<CustomField>
    <fullName>subdistrictName__c</fullName>
    <label>subdistrictName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>