force-app/main/default/objects/Mock_Abha__c/fields/verificationStatus__c.field-meta.xml
<CustomField>
    <fullName>verificationStatus__c</fullName>
    <label>verificationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VERIFIED</fullName>
            </value>
            <value>
                <fullName>UNVERIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>