force-app/main/default/objects/Mock_Abha__c/fields/verificationType__c.field-meta.xml
<CustomField>
    <fullName>verificationType__c</fullName>
    <label>verificationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AADHAAR</fullName>
            </value>
            <value>
                <fullName>BIOMETRIC</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>