force-app/main/default/objects/Mock_Abha__c/fields/yearOfBirth__c.field-meta.xml
<CustomField>
    <fullName>yearOfBirth__c</fullName>
    <label>yearOfBirth</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>